shifted big hours to prevent chart overlapping when there are no hours

--- a/css/style.css
+++ b/css/style.css
@@ -600,6 +600,9 @@ input:placeholder-shown {
         height: 140px;
     }
 
+    #hrs{
+        min-height: 49px;
+    }
     #outputs-data-section {
         margin-top: unset;
     }
